# voxeltest

./: .gitignore  Airship.obj.test  Batman_Body.obj.test  CMakeLists.txt  DonkeyKong.obj.test  Dugtrio.obj.test  Link.obj.test  Lizardon.obj.test  Mudkip.obj.test  Planet0.obj.test  README.md  SamusShip.obj.test  Starfighter.obj.test  X-Wing.obj.test  laser.obj.test  libvolume  skybox.obj.test  spaceship0.obj.test  spaceship1.obj.test
build-linux/: CMakeCache.txt  Makefile  cmake_install.cmake  voxeltest
build-linux/libvolume/: Makefile  cmake_install.cmake
build-linux/libvolume/src/libvolume/: Makefile  cmake_install.cmake  settings.h
build-linux/libvolume/src/libvolume/common/: Makefile  cmake_install.cmake
build-linux/libvolume/src/libvolume/data/: Makefile  cmake_install.cmake
build-linux/libvolume/src/libvolume/window/: Makefile  cmake_install.cmake
src/: CMakeLists.txt  main.cpp  settings.h.in
src/bodies/: planet.cpp  planet.h
